2012-09-01  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: new feature: chapter editor: Added support for the edition
	flags "hidden", "default" and "ordered". First part of the
	implementation for ticket #736.

2012-08-30  Moritz Bunkus  <moritz@bunkus.org>

	* documentation: Added a Basque translation of mmg's guide by
	Xabier Aramendi (see AUTHORS).

	* all: bug fix: Fixed a buffer overflow in the Base64 decoder
	routine.

2012-08-19  Moritz Bunkus  <moritz@bunkus.org>

	* source: Various fixes for building with g++ 4.7.x and clang 3.1.

2012-08-08  Moritz Bunkus  <moritz@bunkus.org>

	* Build system: Boost's "bind" library is not required
	anymore. The C++11 features from "functional" are used instead.

2012-08-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MPEG transport streams whose timecodes wrap
	around/overflow are handled correctly. Fixes #777.

2012-08-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MP2/MP3 audio tracks in MPEG program streams
	that contained garbage at the start of the very first packet
	caused mkvmerge to use uninitialized/random values for certain
	parameters (sample rate, number of channels, and therefore also
	during timecode calculation).

2012-08-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Added support for reading ALAC (Apple
	Lossless Audio Codec) from CAF (CoreAudio), MP4 and Matroska
	files. Implements #753.

2012-08-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: mkvmerge will remove stuffing bytes from
	MPEG-1/-2 video streams that are used to keep the bit rate above
	certain levels (the 0 bytes between slices and the following start
	code). Implements #734.

2012-08-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed audio/video synchronisation when
	reading MPEG program streams with MPEG-1/2 video with respect to B
	frames. Fixes #579.

	* mkvmerge: enhancement: SRT files can have spaces in their
	timecode line's arrow (e.g. "-- >").
