@@ -1,8 +1,9 @@
 2012-09-01  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mmg: new feature: chapter editor: Added support for the edition
-	flags "hidden", "default" and "ordered". First part of the
-	implementation for ticket #736.
+	flags "hidden", "default" and "ordered" as well as the chapter
+	values "segment UID" and "segment edition UID". Implements ticket
+	#736.
 
 2012-08-30  Moritz Bunkus  <moritz@bunkus.org>
 
